Итоговая работа, первый этап, разметка сайта

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
        <a class="description__link" href="#">Узнать больше</a>
        <button class="description_redbutton" type="button" name="button">Заказать</button>
     </section>
-    <!-- Третья часть сайта -->
+    <!-- Третья секция сайта -->
     <section class="frame">
       <p class="frame__main">Самый безопасный автомобиль в мире</p>
       <p class="frame__main">
