--- a/index.html
+++ b/index.html
@@ -15,26 +15,12 @@
                     <span></span>
                   </div>
                   <nav class="header__menu">
-                    <ul class="header__list">
-                      <li>
                         <a href="#" class="header__link">Model S</a>
-                      </li>
-                      <li>
                         <a href="#" class="header__link">Model X</a>
-                      </li>
-                      <li>
                         <a href="#" class="header__link">Roadster</a>
-                      </li>
-                      <li>
                         <a href="#" class="header__link">Energy</a>
-                      </li>
-                      <li>
                         <a href="#" class="header__link">Магазин</a>
-                      </li>
-                      <li>
                         <a href="#" class="header__link">Войти</a>
-                      </li>
-                    </ul>
                   </nav>
                 </div>
             </div>
@@ -42,15 +28,15 @@
     <!-- Первая секция сайта -->
     <section class="drive">
         <div class="drive__title">
-            <img class="drive__modelsblack" src="Model S black.svg">
-            <h3 class="drive__secondtitle">Добро пожаловать в будущее!</h3>
+            <img class="drive__models_black" src="Model S black.svg">
+            <h3 class="drive__second_title">Добро пожаловать в будущее!</h3>
         </div>
-          <img class="drive__backgroundtesla" src="Tesla-Wordmark-Red.png">
-          <img class="drive__redcar" src="tesla-png-tesla-png-hd-1636.png" alt="red-car">
+          <img class="drive__background_tesla" src="Tesla-Wordmark-Red.png">
+          <img class="drive__red_car" src="tesla-png-tesla-png-hd-1636.png" alt="red-car">
           <img class=drive__speed src="2,7.png" alt="0-100 км/ч">
           <img class="drive__cruising" src="632.png" alt="Запас хода">
           <img class="drive__test" src="test drive 1.png" alt="Тест-драйв">
-      <button class="drive_redbutton" type="button" name="Заказать">Заказать</button>
+      <button class="drive__button_color_red" type="button" name="Заказать">Заказать</button>
     </section>
     <!-- Вторая часть сайта -->
     <section class="description">
@@ -77,7 +63,7 @@
          <li class="list__trunk">894 литра <br>Объём грузового пространства</li>
        </ul>
        <a class="description__link" href="#">Узнать больше</a>
-       <button class="description_redbutton" type="button" name="button">Заказать</button>
+       <button class="description__button_color_red" type="button" name="button">Заказать</button>
     </section>
     <!-- Третья секция сайта -->
     <section class="frame">
@@ -93,15 +79,50 @@
          </p>
          <ul class="frame__list">
            Оценка защиты:
-           <li class="frame__list">Спереди</li>
-           <li class="frame__list">Сбоку</li>
-           <li class="frame__list">Сбоку(стойка)</li>
-           <li class="frame__list">Водитель</li>
-           <li class="frame__list">Пассажир</li>
+           <li class="frame__front">Спереди</li>
+           <li class="frame__side">Сбоку</li>
+           <li class="frame__side_rack">Сбоку(стойка)</li>
+           <li class="frame__driver">Водитель</li>
+           <li class="frame__passenger">Пассажир</li>
          </ul>
+         <div class="frame__stars_front">
+           <img class="frame__stars_front" src="Star.svg" alt="star">
+           <img class="frame__stars_front" src="Star.svg" alt="star">
+           <img class="frame__stars_front" src="Star.svg" alt="star">
+           <img class="frame__stars_front" src="Star.svg" alt="star">
+           <img class="frame__stars_front" src="Star.svg" alt="star">
+         </div>
+         <div class="frame__stars_side">
+           <img class="frame__stars_side" src="Star.svg" alt="star">
+           <img class="frame__stars_side" src="Star.svg" alt="star">
+           <img class="frame__stars_side" src="Star.svg" alt="star">
+           <img class="frame__stars_side" src="Star.svg" alt="star">
+           <img class="frame__stars_side" src="Star.svg" alt="star">
+         </div>
+         <div class="frame__stars_side_rack">
+           <img class="frame__stars_side_rack" src="Star.svg" alt="star">
+           <img class="frame__stars_side_rack" src="Star.svg" alt="star">
+           <img class="frame__stars_side_rack" src="Star.svg" alt="star">
+           <img class="frame__stars_side_rack" src="Star.svg" alt="star">
+           <img class="frame__stars_side_rack" src="Star.svg" alt="star">
+         </div>
+         <div class="frame__stars_driver">
+           <img class="frame__stars_driver" src="Star.svg" alt="star">
+           <img class="frame__stars_driver" src="Star.svg" alt="star">
+           <img class="frame__stars_driver" src="Star.svg" alt="star">
+           <img class="frame__stars_driver" src="Star.svg" alt="star">
+           <img class="frame__stars_driver" src="Star.svg" alt="star">
+         </div>
+         <div class="frame__stars_passenger">
+           <img class="frame__stars_passenger" src="Star.svg" alt="star">
+           <img class="frame__stars_passenger" src="Star.svg" alt="star">
+           <img class="frame__stars_passenger" src="Star.svg" alt="star">
+           <img class="frame__stars_passenger" src="Star.svg" alt="star">
+           <img class="frame__stars_passenger" src="Star.svg" alt="star">
+         </div>
          <p class="frame__rating">5 звезд <br>безопасности</p>
          <a class="frame__info" href="#">Узнать больше</a>
-         <button class="frame__redbutton" type="button" name="button">Заказать</button>
+         <button class="frame__button_color_red" type="button" name="button">Заказать</button>
          <img class="frame__text" src="Model S.svg">
          <img class="frame__car" src="Car frame.svg">
          <img class="frame__overturning" src="overturning.svg">
