БЭМ-нейминг поправки.

--- a/index.html
+++ b/index.html
@@ -77,48 +77,48 @@
         случаев на переднем, боковом, заднем <br>
         сидении и в ДТП с переворотом авто.
          </p>
-         <ul class="frame__list">
+         <ul class="frame-list">
            Оценка защиты:
-           <li class="frame__front">Спереди</li>
-           <li class="frame__side">Сбоку</li>
-           <li class="frame__side_rack">Сбоку(стойка)</li>
-           <li class="frame__driver">Водитель</li>
-           <li class="frame__passenger">Пассажир</li>
+           <li class="frame-list__front">Спереди</li>
+           <li class="frame-list__side">Сбоку</li>
+           <li class="frame-list__side-rack">Сбоку(стойка)</li>
+           <li class="frame-list__driver">Водитель</li>
+           <li class="frame-list__passenger">Пассажир</li>
          </ul>
-         <div class="frame__stars_front">
-           <img class="frame__stars_front" src="Star.svg" alt="star">
-           <img class="frame__stars_front" src="Star.svg" alt="star">
-           <img class="frame__stars_front" src="Star.svg" alt="star">
-           <img class="frame__stars_front" src="Star.svg" alt="star">
-           <img class="frame__stars_front" src="Star.svg" alt="star">
+         <div class="frame-front">
+           <img class="frame-front__stars-front" src="Star.svg" alt="star">
+           <img class="frame-front__stars-front" src="Star.svg" alt="star">
+           <img class="frame-front__stars-front" src="Star.svg" alt="star">
+           <img class="frame-front__stars-front" src="Star.svg" alt="star">
+           <img class="frame-front__stars-front" src="Star.svg" alt="star">
          </div>
-         <div class="frame__stars_side">
-           <img class="frame__stars_side" src="Star.svg" alt="star">
-           <img class="frame__stars_side" src="Star.svg" alt="star">
-           <img class="frame__stars_side" src="Star.svg" alt="star">
-           <img class="frame__stars_side" src="Star.svg" alt="star">
-           <img class="frame__stars_side" src="Star.svg" alt="star">
+         <div class="frame-side">
+           <img class="frame-side__stars-side" src="Star.svg" alt="star">
+           <img class="frame-side__stars-side" src="Star.svg" alt="star">
+           <img class="frame-side__stars-side" src="Star.svg" alt="star">
+           <img class="frame-side__stars-side" src="Star.svg" alt="star">
+           <img class="frame-side__stars-side" src="Star.svg" alt="star">
          </div>
-         <div class="frame__stars_side_rack">
-           <img class="frame__stars_side_rack" src="Star.svg" alt="star">
-           <img class="frame__stars_side_rack" src="Star.svg" alt="star">
-           <img class="frame__stars_side_rack" src="Star.svg" alt="star">
-           <img class="frame__stars_side_rack" src="Star.svg" alt="star">
-           <img class="frame__stars_side_rack" src="Star.svg" alt="star">
+         <div class="frame-rack">
+           <img class="frame-rack__stars-rack" src="Star.svg" alt="star">
+           <img class="frame-rack__stars-rack" src="Star.svg" alt="star">
+           <img class="frame-rack__stars-rack" src="Star.svg" alt="star">
+           <img class="frame-rack__stars-rack" src="Star.svg" alt="star">
+           <img class="frame-rack__stars-rack" src="Star.svg" alt="star">
          </div>
-         <div class="frame__stars_driver">
-           <img class="frame__stars_driver" src="Star.svg" alt="star">
-           <img class="frame__stars_driver" src="Star.svg" alt="star">
-           <img class="frame__stars_driver" src="Star.svg" alt="star">
-           <img class="frame__stars_driver" src="Star.svg" alt="star">
-           <img class="frame__stars_driver" src="Star.svg" alt="star">
+         <div class="frame-driver">
+           <img class="frame-driver__stars-driver" src="Star.svg" alt="star">
+           <img class="frame-driver__stars-driver" src="Star.svg" alt="star">
+           <img class="frame-driver__stars-driver" src="Star.svg" alt="star">
+           <img class="frame-driver__stars-driver" src="Star.svg" alt="star">
+           <img class="frame-driver__stars-driver" src="Star.svg" alt="star">
          </div>
-         <div class="frame__stars_passenger">
-           <img class="frame__stars_passenger" src="Star.svg" alt="star">
-           <img class="frame__stars_passenger" src="Star.svg" alt="star">
-           <img class="frame__stars_passenger" src="Star.svg" alt="star">
-           <img class="frame__stars_passenger" src="Star.svg" alt="star">
-           <img class="frame__stars_passenger" src="Star.svg" alt="star">
+         <div class="frame-passenger">
+           <img class="frame-passenger__stars-passenger" src="Star.svg" alt="star">
+           <img class="frame-passenger__stars-passenger" src="Star.svg" alt="star">
+           <img class="frame-passenger__stars-passenger" src="Star.svg" alt="star">
+           <img class="frame-passenger__stars-passenger" src="Star.svg" alt="star">
+           <img class="frame-passenger__stars-passenger" src="Star.svg" alt="star">
          </div>
          <p class="frame__rating">5 звезд <br>безопасности</p>
          <a class="frame__info" href="#">Узнать больше</a>
