--- a/index.html
+++ b/index.html
@@ -8,28 +8,26 @@
   <body>
     <!-- Шапка сайта -->
     <header class="header">
-      <div class="container">
-              <div class="header__body">
+          <div class="header__body">
                     <a href="#" class="header__logo"></a>
                   <div class="header__burger">
                     <span></span>
                   </div>
                   <nav class="header__menu">
-                        <a href="#" class="header__link">Model S</a>
-                        <a href="#" class="header__link">Model X</a>
-                        <a href="#" class="header__link">Roadster</a>
-                        <a href="#" class="header__link">Energy</a>
-                        <a href="#" class="header__link">Магазин</a>
-                        <a href="#" class="header__link">Войти</a>
+                        <a href="#" class="header_menu__link">Model S</a>
+                        <a href="#" class="header_menu__link">Model X</a>
+                        <a href="#" class="header_menu__link">Roadster</a>
+                        <a href="#" class="header_menu__link">Energy</a>
+                        <a href="#" class="header_menu__link">Магазин</a>
+                        <a href="#" class="header_menu__link">Войти</a>
                   </nav>
-                </div>
-            </div>
+           </div>
     </header>
     <!-- Первая секция сайта -->
     <section class="drive">
         <div class="drive__title">
-            <img class="drive__models_black" src="Model S black.svg">
-            <h3 class="drive__second_title">Добро пожаловать в будущее!</h3>
+            <img class="drive_title__models_black" src="Model S black.svg">
+            <h3 class="drive_title__second_title">Добро пожаловать в будущее!</h3>
         </div>
           <img class="drive__background_tesla" src="Tesla-Wordmark-Red.png">
           <img class="drive__red_car" src="tesla-png-tesla-png-hd-1636.png" alt="red-car">
@@ -57,7 +55,7 @@
           просторный интерьер для каждого<br>
           пассажира.
        </p>
-       <ul class="description__list">
+       <ul class="list">
          <li class="list__display">17 дюймов<br>большой дисплей</li>
          <li class="list___update">Беспроводное обновление ПО<br>Повышенная функциональность </li>
          <li class="list__trunk">894 литра <br>Объём грузового пространства</li>
