--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
                   <div class="header__burger">
                     <span></span>
                   </div>
-                  <nav class="header__menu">
-                        <a href="#" class="header_menu__link">Model S</a>
-                        <a href="#" class="header_menu__link">Model X</a>
-                        <a href="#" class="header_menu__link">Roadster</a>
-                        <a href="#" class="header_menu__link">Energy</a>
-                        <a href="#" class="header_menu__link">Магазин</a>
-                        <a href="#" class="header_menu__link">Войти</a>
+                  <nav class="header__menu menu">
+                        <a href="#" class="menu__link">Model S</a>
+                        <a href="#" class="menu__link">Model X</a>
+                        <a href="#" class="menu__link">Roadster</a>
+                        <a href="#" class="menu__link">Energy</a>
+                        <a href="#" class="menu__link">Магазин</a>
+                        <a href="#" class="menu__link">Войти</a>
                   </nav>
            </div>
     </header>
     <!-- Первая секция сайта -->
     <section class="drive">
-        <div class="drive__title">
-            <img class="drive_title__models_black" src="Model S black.svg">
-            <h3 class="drive_title__second_title">Добро пожаловать в будущее!</h3>
+        <div class="drive__title title">
+            <img class="title__models-black" src="Model S black.svg">
+            <h3 class="title__second-title">Добро пожаловать в будущее!</h3>
         </div>
           <img class="drive__background_tesla" src="Tesla-Wordmark-Red.png">
           <img class="drive__red_car" src="tesla-png-tesla-png-hd-1636.png" alt="red-car">
@@ -55,9 +55,9 @@
           просторный интерьер для каждого<br>
           пассажира.
        </p>
-       <ul class="list">
+       <ul class="description__list list">
          <li class="list__display">17 дюймов<br>большой дисплей</li>
-         <li class="list___update">Беспроводное обновление ПО<br>Повышенная функциональность </li>
+         <li class="list__update">Беспроводное обновление ПО<br>Повышенная функциональность </li>
          <li class="list__trunk">894 литра <br>Объём грузового пространства</li>
        </ul>
        <a class="description__link" href="#">Узнать больше</a>
