Промежуточная итоговая Шаг 3

--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
     <!-- Шапка сайта -->
     <header class="header">
           <div class="header__body">
-                    <a href="#" class="header__logo"></a>
+                    <img class="header__logo" src="Tesla-Wordmark-Red.png">
                   <div class="header__burger">
                     <span></span>
                   </div>
                   <nav class="header__menu menu">
-                        <a href="#" class="menu__link">Model S</a>
-                        <a href="#" class="menu__link">Model X</a>
-                        <a href="#" class="menu__link">Roadster</a>
-                        <a href="#" class="menu__link">Energy</a>
-                        <a href="#" class="menu__link">Магазин</a>
-                        <a href="#" class="menu__link">Войти</a>
+                        <a href="#" class="menu__link_models">Model S</a>
+                        <a href="#" class="menu__link_modelX">Model X</a>
+                        <a href="#" class="menu__link_model3">Model 3</a>
+                        <a href="#" class="menu__link_roadster">Roadster</a>
+                        <a href="#" class="menu__link_energy">Energy</a>
+                        <a href="#" class="menu__link_shop">Магазин</a>
+                        <a href="#" class="menu__link_enter">Войти</a>
                   </nav>
            </div>
     </header>
@@ -35,9 +36,10 @@
           <img class=drive__speed src="2,7.png" alt="0-100 км/ч">
           <img class="drive__cruising" src="632.png" alt="Запас хода">
           <img class="drive__test" src="test drive 1.png" alt="Тест-драйв">
-      <button class="drive__button_color_red" type="button" name="Заказать">Заказать</button>
+          <img class="drive__vector" src="Vec.png" alt="Красная стрелка">
+      <button class="drive__button_color_red" type="button"name="Заказать">Заказать</button>
     </section>
-    <!-- Вторая часть сайта -->
+    <!-- Вторая часть сайта
     <section class="description">
       <img  class="description__red" src="Model S redsmal.svg">
       <img class="description__salon" src="2013-tesla-model-s-cockpit.png" alt="car-salon">
@@ -63,8 +65,8 @@
        </ul>
        <a class="description__link" href="#">Узнать больше</a>
        <button class="description__button_color_red" type="button" name="button">Заказать</button>
-    </section>
-    <!-- Третья секция сайта -->
+    </section>-->
+    <!-- Третья секция сайта
     <section class="frame">
       <p class="frame__main">Самый безопасный автомобиль в мире</p>
       <p class="frame__main">
@@ -127,6 +129,6 @@
          <img class="frame__overturning" src="overturning.svg">
          <img class="frame__front" src="front protection.svg">
          <img class="frame__side" src="side protection.svg">
-    </section>
+    </section>-->
   </body>
 </html>
