подгонка под макет 22.01.21

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     <!-- Первая секция сайта -->
     <section class="drive">
         <div class="drive__title title">
-            <img class="title__models-black" src="Model S black.svg">
+            <h3 class="title__models-black">Model S</h3>
             <h3 class="title__second-title">Добро пожаловать в будущее!</h3>
         </div>
         <img class="drive__background_tesla" src="Tesla-Wordmark-Red.png">
           <img class="drive__red_car" src="tesla-png-tesla-png-hd-1636.png" alt="red-car">
-          <img class=drive__speed src="2,7.png" alt="0-100 км/ч">
-          <img class="drive__cruising" src="632.png" alt="Запас хода">
-          <img class="drive__test" src="test drive 1.png" alt="Тест-драйв">
+          <img class="drive__speed" src="speed.png" alt="0-100 км/ч">
+          <img class="drive__cruising" src="road icon.png" alt="Запас хода">
+          <img class="drive__test" src="steering-wheel.png" alt="Тест-драйв">
       <button class="drive__button_color_red" type="button"name="Заказать">Заказать</button>
       <img class="drive__vector" src="Vec.png" alt="Красная стрелка">
     </section>
