--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1.0, width=device-width">
     <title>Tesla</title>
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="style.css">
@@ -31,13 +32,23 @@
             <h3 class="title__models-black">Model S</h3>
             <h3 class="title__second-title">Добро пожаловать в будущее!</h3>
         </div>
-        <img class="drive__background_tesla" src="Tesla-Wordmark-Red.png">
+        <!-- <div class="drive__background_tesla"></div> -->
+          <img class="drive__background_tesla" src="Tesla-Wordmark-Red.svg">
           <img class="drive__red_car" src="tesla-png-tesla-png-hd-1636.png" alt="red-car">
-          <img class="drive__speed" src="speed.png" alt="0-100 км/ч">
-          <img class="drive__cruising" src="road icon.png" alt="Запас хода">
-          <img class="drive__test" src="steering-wheel.png" alt="Тест-драйв">
-      <button class="drive__button_color_red" type="button"name="Заказать">Заказать</button>
-      <img class="drive__vector" src="Vec.png" alt="Красная стрелка">
+          <nav class="drive__discription">
+            <img class="drive__speed" src="speed.png" alt="0-100 км/ч">
+            <h3 class="drive__speed-text">2,7</h3>
+            <h4 class="drive__speed-sec">сек</h4>
+            <!-- <p class="drive__speed-numbers">0-100км/час</p> -->
+            <img class="drive__cruising" src="road icon.png" alt="Запас хода">
+            <h3 class="drive__crusing-text">632</h3>
+            <h2 class="drive__crusing-km">км</h2>
+            <!-- <p class="drive__crusing-reserve">запас хода</p> -->
+            <img class="drive__test" src="steering-wheel.png" alt="Тест-драйв">
+            <h2 class="drive__test-text">ТЕСТ ДРАЙВ</h2>
+        <button class="drive__button_color_red" type="button"name="Заказать">Заказать</button>
+          </nav>
+          <img class="drive__vector" src="Vec.png" alt="Красная стрелка">
     </section>
     <!-- Вторая часть сайта
     <section class="description">
