--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
             <h3 class="title__models-black">Model S</h3>
             <h3 class="title__second-title">Добро пожаловать в будущее!</h3>
         </div>
-        <!-- <div class="drive__background_tesla"></div> -->
-          <img class="drive__background_tesla" src="Tesla-Wordmark-Red.svg">
+        <div class="drive__background_tesla"></div>
+          <!-- <img class="drive__background_tesla" src="Tesla-Wordmark-Red.svg"> -->
           <img class="drive__red_car" src="tesla-png-tesla-png-hd-1636.png" alt="red-car">
+          <!-- <div class="drive_red_car"></div> -->
           <nav class="drive__discription">
             <img class="drive__speed" src="speed.png" alt="0-100 км/ч">
             <h3 class="drive__speed-text">2,7</h3>
